--- a/.github/workflows/test-branch.yml
+++ b/.github/workflows/test-branch.yml
@@ -10,6 +10,7 @@ on:
       - '*/src/*/kotlin/**'
       - '*/src/*/java/**'
       - '*/src/*/resource/**'
+      - 'gradle/**'
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
