--- a/.github/workflows/doc-test-branch.yml
+++ b/.github/workflows/doc-test-branch.yml
@@ -12,6 +12,15 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 
+env:
+  # Name of module and id separated by a slash
+  INSTANCE: Writerside/qg
+  INSTANCE_NAME: qg
+  # Replace HI with the ID of the instance in capital letters
+  ARTIFACT: webHelpQG2-all.zip
+  # Writerside docker image version
+  DOCKER_VERSION: 233.14389
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -41,7 +50,7 @@ jobs:
         if: ${{ always() }}
         with:
           name: 'report.json'
-          path: artifacts/report.json
+          path: artifacts/**
           retention-days: 7
 
   # Add the job below and artifacts/report.json on Upload documentation step above if you want to fail the build when documentation contains errors
