--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -8,8 +8,8 @@ ktor = "2.3.8"
 openjdk-jmh = "1.37"
 log4j = "2.23.1"
 # simbot
-simbot = "4.0.0-RC3"
-suspendTransform = "0.8.0-beta1"
+simbot = "4.0.0"
+suspendTransform = "0.9.0"
 gradleCommon = "0.4.0"
 # ksp
 ksp = "2.0.0-1.0.22"
