--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -5,6 +5,8 @@ on:
       - v4.**.**
 
 env:
+  JAVA_VERSION: 21
+  JAVA_DISTRIBUTION: zulu
   IS_CI: true
   GPG_KEY_ID: ${{ secrets.GPG_KEY_ID }}
   GPG_SECRET_KEY: ${{ secrets.GPG_SECRET_KEY }}
@@ -14,40 +16,50 @@ env:
   SONATYPE_USERNAME: ${{ secrets.SONATYPE_USERNAME }}
   SONATYPE_PASSWORD: ${{ secrets.SONATYPE_PASSWORD }}
   GRADLE_OPTS: "-Xmx8g -Xms2g -XX:MaxMetaspaceSize=1g -Dfile.encoding=UTF-8"
+  GRADLE_VERSION: 8.5
 
 
 jobs:
-  run-test-and-publish:
-    name: Run test and publish
+  run-test:
+    name: Run all tests for publish
     strategy:
       matrix:
         os: [ macos-latest, windows-latest, ubuntu-latest ]
     runs-on: ${{ matrix.os }}
     steps:
-      # 检出仓库代码
-      - name: Check Out Repo
-        uses: actions/checkout@v4
-
-      # setup Java
-      - name: Setup Java
-        uses: actions/setup-java@v4
+      - uses: actions/checkout@v4
+      - uses: actions/setup-java@v4
         with:
-          distribution: 'zulu'
-          java-version: 21
+          distribution: ${{ env.JAVA_DISTRIBUTION }}
+          java-version: ${{ env.JAVA_VERSION }}
           cache: 'gradle'
 
       # setup Gradle
       - name: Gradle Run Test
         uses: gradle/actions/setup-gradle@v3
         with:
-          gradle-version: 8.5
-          arguments: assemble test -Porg.gradle.daemon=false
+          gradle-version: ${{ env.GRADLE_VERSION }}
 
-      # setup Gradle
-      - name: Publish Release
+      - name: Run all tests
+        run: gradle assemble allTests --stacktrace --warning-mode all
+
+  publish-releases:
+    name: Publish releases
+    needs: run-test
+    # 交叉编译 support
+    # see https://kotlinlang.org/docs/multiplatform-publish-lib.html#host-requirements
+    runs-on: macos-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-java@v4
+        with:
+          distribution: ${{ env.JAVA_DISTRIBUTION }}
+          java-version: ${{ env.JAVA_VERSION }}
+          cache: 'gradle'
+      - name: Publish releases
         uses: gradle/actions/setup-gradle@v3
         with:
-          gradle-version: 8.5
+          gradle-version: ${{ env.GRADLE_VERSION }}
           arguments: |
             publishToSonatype
             closeAndReleaseStagingRepositories
@@ -56,7 +68,6 @@ jobs:
             -x test
             --build-cache
             -Porg.gradle.jvmargs="-Xmx8g -Xms2g -XX:MaxMetaspaceSize=1g -Dfile.encoding=UTF-8"
-            -Porg.gradle.daemon=false
 
         env:
           SIMBOT_IS_SNAPSHOT: false
@@ -65,66 +76,26 @@ jobs:
   create-release:
     name: Create release
     runs-on: ubuntu-latest
-    needs: run-test-and-publish
+    needs: publish-releases
     permissions:
       contents: write
     steps:
       # 检出仓库代码
-      - name: Check Out Repo
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
         # Create gitHub release
       - name: Create Github Release
-        uses: softprops/action-gh-release@v0.1.14
+        uses: softprops/action-gh-release@v2
         with:
           token: ${{ secrets.PUSH_TOKEN }}
           body_path: .changelog/${{ github.ref_name }}.md
           generate_release_notes: true
           prerelease: ${{ contains(github.ref_name, 'preview') || contains(github.ref_name, 'alpha') }}
 
-  #  || contains(github.ref_name, 'beta')
-
-  publish-snapshot:
-    name: Publish snapshot
-    strategy:
-      matrix:
-        os: [ macos-latest, windows-latest, ubuntu-latest ]
-    runs-on: ${{ matrix.os }}
-    needs: run-test-and-publish
-    steps:
-      # 检出仓库代码
-      - name: Check out repo
-        uses: actions/checkout@v4
-
-      # setup Java
-      - name: Setup java
-        uses: actions/setup-java@v4
-        with:
-          distribution: 'zulu'
-          java-version: 21
-
-      # setup Gradle
-      - name: Gradle publish snapshot
-        uses: gradle/actions/setup-gradle@v3
-        with:
-          gradle-version: 8.5
-          arguments: |
-            publishToSonatype
-            closeAndReleaseStagingRepositories
-            --info
-            --warning-mode all
-            -x test
-            --build-cache
-            -Porg.gradle.jvmargs="-Xmx8g -Xms2g -XX:MaxMetaspaceSize=1g -Dfile.encoding=UTF-8"
-            -Porg.gradle.daemon=false
-        env:
-          SIMBOT_IS_SNAPSHOT: true
-          SIMBOT_SNAPSHOT_ONLY: true
-
   deploy-doc:
     name: Deploy-doc
     runs-on: ubuntu-latest
-    needs: run-test-and-publish
+    needs: publish-releases
     steps:
       # 检出仓库代码
       - name: Check out repo
@@ -136,14 +107,14 @@ jobs:
       - name: Setup java
         uses: actions/setup-java@v4
         with:
-          distribution: 'zulu'
-          java-version: 21
+          distribution: ${{ env.JAVA_DISTRIBUTION }}
+          java-version: ${{ env.JAVA_VERSION }}
 
       # setup Gradle
       - name: Gradle generate documentation
         uses: gradle/actions/setup-gradle@v3
         with:
-          gradle-version: 8.5
+          gradle-version: ${{ env.GRADLE_VERSION }}
           arguments: |
             dokkaHtmlMultiModule
             --info 
