--- a/.github/workflows/publish-snapshot.yml
+++ b/.github/workflows/publish-snapshot.yml
@@ -20,6 +20,8 @@ on:
   workflow_dispatch:
 
 env:
+  JAVA_VERSION: 21
+  JAVA_DISTRIBUTION: zulu
   IS_CI: true
   GPG_KEY_ID: ${{ secrets.GPG_KEY_ID }}
   GPG_SECRET_KEY: ${{ secrets.GPG_SECRET_KEY }}
@@ -31,45 +33,63 @@ env:
   SIMBOT_IS_SNAPSHOT: true
   SIMBOT_SNAPSHOT_ONLY: true
   GRADLE_OPTS: "-Dfile.encoding=UTF-8"
+  GRADLE_VERSION: 8.5
 
 
 jobs:
-  publish-snapshot:
-    name: Publish snapshot
+  run-test:
+    name: Run all tests
     strategy:
       matrix:
         os: [ macos-latest, windows-latest, ubuntu-latest ]
     runs-on: ${{ matrix.os }}
     steps:
-      # 检出仓库代码
-      - name: Check out repo
-        uses: actions/checkout@v4
-
-      # setup Java
-      - name: Setup java
-        uses: actions/setup-java@v4
+      - uses: actions/checkout@v4
+      - uses: actions/setup-java@v4
         with:
-          distribution: 'zulu'
-          java-version: 21
+          distribution: ${{ env.JAVA_DISTRIBUTION }}
+          java-version: ${{ env.JAVA_VERSION }}
+          cache: 'gradle'
 
       # setup Gradle
       - name: Gradle test and publish snapshot
         uses: gradle/actions/setup-gradle@v3
         with:
-          gradle-version: 8.5
+          gradle-version: ${{ env.GRADLE_VERSION }}
+
+      - name: Gradle run all tests
+        run: gradle assemble allTests --stacktrace --warning-mode all
+
+  publish-snapshots:
+    name: Publish snapshots
+    needs: run-test
+    runs-on: macos-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-java@v4
+        with:
+          distribution: ${{ env.JAVA_DISTRIBUTION }}
+          java-version: ${{ env.JAVA_VERSION }}
+          cache: 'gradle'
+
+      # setup Gradle
+      - name: Publish snapshots
+        uses: gradle/actions/setup-gradle@v3
+        with:
+          gradle-version: ${{ env.GRADLE_VERSION }}
           arguments: |
-            test 
             publishToSonatype
             closeAndReleaseStagingRepositories
-            --info
-            --warning-mode all
-            -Porg.gradle.jvmargs="-Xmx8g -Xms2g -XX:MaxMetaspaceSize=1g -Dfile.encoding=UTF-8" 
-            -Porg.gradle.daemon=false
+            --info 
+            --warning-mode all 
+            -Porg.gradle.jvmargs="-Xmx8g -Xms2g -XX:MaxMetaspaceSize=1g -Dfile.encoding=UTF-8"
+        env:
+          SIMBOT_IS_SNAPSHOT: true
 
   deploy-doc:
     name: Deploy-doc
     runs-on: ubuntu-latest
-    needs: publish-snapshot
+    needs: publish-snapshots
     steps:
       # 检出仓库代码
       - name: Check out repo
@@ -81,14 +101,14 @@ jobs:
       - name: Setup java
         uses: actions/setup-java@v4
         with:
-          distribution: 'zulu'
-          java-version: 21
+          distribution: ${{ env.JAVA_DISTRIBUTION }}
+          java-version: ${{ env.JAVA_VERSION }}
 
       # setup Gradle
       - name: Gradle generate documentation
         uses: gradle/actions/setup-gradle@v3
         with:
-          gradle-version: 8.5
+          gradle-version: ${{ env.GRADLE_VERSION }}
           arguments: |
             -Porg.gradle.jvmargs="-Xmx4g -Xms4g -XX:MaxMetaspaceSize=2g -Dfile.encoding=UTF-8" 
             -Porg.gradle.daemon=false
