--- a/Writerside/writerside.cfg
+++ b/Writerside/writerside.cfg
@@ -4,5 +4,5 @@
 <ihp version="2.0">
     <topics dir="topics" web-path="topics"/>
     <images dir="images" web-path="images"/>
-    <instance src="qg.tree" version="v%version%"/>
+    <instance src="qg.tree" version="v%qg-version%"/>
 </ihp>
