--- a/.github/workflows/deploy-v4-website.yml
+++ b/.github/workflows/deploy-v4-website.yml
@@ -122,32 +122,32 @@ jobs:
         uses: actions/deploy-pages@v1
 
   # https://www.jetbrains.com/help/writerside/configure-search.html
-  publish-indexes:
-    # Requires the build-job results
-    needs: [build, test]
-    runs-on: ubuntu-latest
-    container:
-      image: registry.jetbrains.team/p/writerside/builder/algolia-publisher:2.0.32-3
-
-    env:
-
-      CONFIG_JSON_VERSION: ${{ fromJSON(needs.build.outputs.config_json).productVersion }}
-
-    steps:
-      - name: Download artifact
-        uses: actions/download-artifact@v3
-        with:
-          name: algolia-indexes
-
-
-      - name: Unzip artifact
-        run: |
-          unzip -O UTF-8 -qq ${{ env.ALGOLIA_ARTIFACT }} -d algolia-indexes
-          env "algolia-key=${{secrets.ALGOLIA_KEY}}" java -jar /opt/builder/help-publication-agent.jar \
-          update-index \
-          --application-name ${{env.ALGOLIA_APP_NAME}} \
-          --index-name ${{env.ALGOLIA_INDEX_NAME}} \
-          --product ${{env.INSTANCE_NAME}} \
-          --version ${{env.CONFIG_JSON_VERSION}} \
-          --index-directory algolia-indexes/ \
-          2>&1 | tee algolia-update-index-log.txt
+#  publish-indexes:
+#    # Requires the build-job results
+#    needs: [build, test]
+#    runs-on: ubuntu-latest
+#    container:
+#      image: registry.jetbrains.team/p/writerside/builder/algolia-publisher:2.0.32-3
+#
+#    env:
+#
+#      CONFIG_JSON_VERSION: ${{ fromJSON(needs.build.outputs.config_json).productVersion }}
+#
+#    steps:
+#      - name: Download artifact
+#        uses: actions/download-artifact@v3
+#        with:
+#          name: algolia-indexes
+#
+#
+#      - name: Unzip artifact
+#        run: |
+#          unzip -O UTF-8 -qq ${{ env.ALGOLIA_ARTIFACT }} -d algolia-indexes
+#          env "algolia-key=${{secrets.ALGOLIA_KEY}}" java -jar /opt/builder/help-publication-agent.jar \
+#          update-index \
+#          --application-name ${{env.ALGOLIA_APP_NAME}} \
+#          --index-name ${{env.ALGOLIA_INDEX_NAME}} \
+#          --product ${{env.INSTANCE_NAME}} \
+#          --version ${{env.CONFIG_JSON_VERSION}} \
+#          --index-directory algolia-indexes/ \
+#          2>&1 | tee algolia-update-index-log.txt
