--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,9 +1,9 @@
 blank_issues_enabled: true
 
 contact_links:
-  - name: 问题反馈
+  - name: 统一反馈处
     url: https://github.com/simple-robot/simpler-robot/issues/new/choose
-    about: 通过simbot核心库issues统一反馈组件问题
+    about: 通过simbot核心仓库统一反馈问题
 
   - name: 社区
     url: https://github.com/orgs/simple-robot/discussions
