Update Qodana CI

--- a/.github/workflows/qodana_code_quality.yml
+++ b/.github/workflows/qodana_code_quality.yml
@@ -2,22 +2,29 @@ name: Qodana
 on:
   workflow_dispatch:
   pull_request:
-    branches-ignore:
-      - 'dependabot/**'
   push:
     branches:
       - dev/main
       - main
-      - '!dependabot/**'
 
 jobs:
   qodana:
+    if: ${{ !startsWith(github.head_ref, 'dependabot/') }}
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
+      pull-requests: write
+      checks: write
     steps:
       - uses: actions/checkout@v4
         with:
-          fetch-depth: 0
+          ref: ${{ github.event.pull_request.head.sha }}  # to check out the actual pull request commit, not the merge commit
+          fetch-depth: 0  # a full history is required for pull request analysis
       - name: 'Qodana Scan'
-        uses: JetBrains/qodana-action@v2023.3.1
+        uses: JetBrains/qodana-action@main
+        with:
+          upload-result: true
+          github-token: ${{ secrets.FORLIY_ACCESS_TOKEN }}
         env:
-          QODANA_TOKEN: ${{ secrets.QODANA_TOKEN }}
+          QODANA_TOKEN: ${{ secrets.QODANA_TOKEN }} # read the steps about it below
+          GITHUB_TOKEN: ${{ secrets.FORLIY_ACCESS_TOKEN }}
