--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -89,6 +89,7 @@ jobs:
         with:
           token: ${{ secrets.PUSH_TOKEN }}
           body_path: .changelog/${{ github.ref_name }}.md
+          body: ''
           generate_release_notes: true
           prerelease: ${{ contains(github.ref_name, 'preview') || contains(github.ref_name, 'alpha') }}
 
