--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,5 @@
 [versions]
-kotlin = "2.0.10"
+kotlin = "2.0.20"
 kotlinx-coroutines = "1.9.0"
 kotlinx-serialization = "1.7.1"
 kotlinx-datetime = "0.6.1"
@@ -9,10 +9,10 @@ openjdk-jmh = "1.37"
 log4j = "2.23.1"
 # simbot
 simbot = "4.6.0"
-suspendTransform = "0.9.0"
+suspendTransform = "2.0.20-0.9.3"
 gradleCommon = "0.6.0"
 # ksp
-ksp = "2.0.10-1.0.24"
+ksp = "2.0.20-1.0.25"
 # https://square.github.io/kotlinpoet/
 kotlinPoet = "1.18.1"
 # https://detekt.dev/docs/intro
