--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -43,6 +43,14 @@ jobs:
       - name: Run all tests
         run: gradle assemble allTests --stacktrace --warning-mode all
 
+      - name: Upload test reports
+        uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: test-reports-${{ runner.os }}
+          path: '**/build/reports/tests'
+          retention-days: 7
+
   publish-releases:
     name: Publish releases
     needs: run-test
