--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,5 @@
 [versions]
-kotlin = "2.0.20"
+kotlin = "2.1.0"
 kotlinx-coroutines = "1.9.0"
 kotlinx-serialization = "1.7.3"
 kotlinx-datetime = "0.6.1"
@@ -8,11 +8,12 @@ dokka = "1.9.20"
 ktor = "2.3.12"
 log4j = "2.24.2"
 # simbot
-simbot = "4.7.0"
-suspendTransform = "2.0.20-0.9.4"
+simbot = "4.10.0"
+suspendTransform = "2.1.0-0.11.0"
 gradleCommon = "0.6.0"
 # ksp
-ksp = "2.0.20-1.0.25"
+# https://github.com/google/ksp
+ksp = "2.1.0-1.0.29"
 # https://square.github.io/kotlinpoet/
 kotlinPoet = "2.0.0"
 # https://detekt.dev/docs/intro
@@ -114,6 +115,7 @@ detekt = { id = "io.gitlab.arturbosch.detekt", version.ref = "detekt" }
 # binary-compatibility-validator
 # https://github.com/Kotlin/binary-compatibility-validator
 kotlinxBinaryCompatibilityValidator = { id = "org.jetbrains.kotlinx.binary-compatibility-validator", version = "0.16.3" }
+suspendTransform = { id = "love.forte.plugin.suspend-transform", version.ref = "suspendTransform" }
 
 [bundles]
 gradle-common = ["gradle-common-core", "gradle-common-multiplatform", "gradle-common-publication"]
