--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -20,7 +20,12 @@ kotlinPoet = "2.0.0"
 # TODO apply detekt
 detekt = "1.23.7"
 
-
+#
+bouncycastle = "1.80"
+#
+eddsa = "0.3.0"
+# https://github.com/ionspin/kotlin-multiplatform-libsodium
+libsodium-bindings = "0.9.2"
 [libraries]
 # simbot
 simbot-api = { group = "love.forte.simbot", name = "simbot-api", version.ref = "simbot" }
@@ -108,6 +113,11 @@ suspend-transform-gradle = { module = "love.forte.plugin.suspend-transform:suspe
 gradle-common-core = { group = "love.forte.gradle.common", name = "gradle-common-core", version.ref = "gradleCommon" }
 gradle-common-multiplatform = { group = "love.forte.gradle.common", name = "gradle-common-kotlin-multiplatform", version.ref = "gradleCommon" }
 gradle-common-publication = { group = "love.forte.gradle.common", name = "gradle-common-publication", version.ref = "gradleCommon" }
+
+# ed25519
+bouncycastle-bcprov-jdk18on = { module = "org.bouncycastle:bcprov-jdk18on", version.ref = "bouncycastle" }
+i2p-crypto-eddsa = { module = "net.i2p.crypto:eddsa", version.ref = "eddsa" }
+libsodium-bindings = { module = "com.ionspin.kotlin:multiplatform-crypto-libsodium-bindings", version.ref= "libsodium-bindings" }
 
 [plugins]
 ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
