Update Kotlin to 2.1.20; simbot to 4.12.0; TSKCP to 2.1.20-0.12.0; KSP to 2.1.20-1.0.32;

--- a/gradle.properties
+++ b/gradle.properties
@@ -9,7 +9,8 @@ kotlin.native.ignoreDisabledTargets=true
 
 # Such dependencies are not applicable for Kotlin/Native, consider changing the dependency type to 'implementation' or 'api'.
 # To disable this warning, set the kotlin.native.ignoreIncorrectDependencies=true project property
-kotlin.native.ignoreIncorrectDependencies=true
+# Deprecated
+# kotlin.native.ignoreIncorrectDependencies=true
 
 # 'expect'/'actual' classes (including interfaces, objects, annotations, enums, and 'actual' typealiases) are in Beta. You can use -Xexpect-actual-classes flag to suppress this warning. Also see: https://youtrack.jetbrains.com/issue/KT-61573
 # "-Xexpect-actual-classes"
