--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -10,3 +10,13 @@ updates:
     assignees:
       - ForteScarlet
     open-pull-requests-limit: 10
+
+    ignore:
+      - dependency-name: 'io.ktor:*'
+        version: '3.+'
+      - dependency-name: 'io.ktor.plugin'
+        version: '3.+'
+      - dependency-name: 'love.forte.plugin.suspend-transform:*'
+      - dependency-name: 'love.forte.plugin.suspend-transform'
+      - dependency-name: 'love.forte.plugin.suspend-transform'
+      - dependency-name: 'org.jetbrains.dokka:*'
