--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,10 +5,11 @@ kotlinx-serialization = "1.7.3"
 kotlinx-datetime = "0.6.1"
 kotlinx-io = "0.6.0"
 dokka = "1.9.20"
-ktor = "2.3.12"
+# 暂时不支持 3.x 的 ktor
+ktor = { prefer = "2.3.12", reject = ["3.+"] }
 log4j = "2.24.2"
 # simbot
-simbot = "4.12.0"
+simbot = { prefer = "4.12.0" }
 suspendTransform = "2.1.20-0.12.0"
 gradleCommon = "0.6.0"
 # ksp
