deps(docs): 更新 Dokka 到 v2

--- a/gradle.properties
+++ b/gradle.properties
@@ -26,5 +26,11 @@ org.gradle.caching=true
 #kotlin.experimental.tryK2=true
 
 
+# Dokka V2
+## https://kotlinlang.org/docs/dokka-migration.html#enable-the-new-dokka-gradle-plugin
+org.jetbrains.dokka.experimental.gradle.pluginMode=V2Enabled
+#org.jetbrains.dokka.experimental.gradle.pluginMode=V2EnabledWithHelpers
+
+
 #http.proxyHost=localhost
 #http.proxyPort=7790
