--- a/.github/workflows/publish-snapshot.yml
+++ b/.github/workflows/publish-snapshot.yml
@@ -56,9 +56,15 @@ jobs:
         uses: gradle/actions/setup-gradle@v3
         with:
           gradle-version: ${{ env.GRADLE_VERSION }}
+          arguments: |
+            assemble
+            allTests
+            --stacktrace 
+            --warning-mode all 
+            -Pkotlin.native.enableKlibsCrossCompilation=false
 
-      - name: Gradle run all tests
-        run: gradle assemble allTests --stacktrace --warning-mode all -Pkotlin.native.enableKlibsCrossCompilation=false
+#      - name: Gradle run all tests
+#        run: gradle assemble allTests --stacktrace --warning-mode all -Pkotlin.native.enableKlibsCrossCompilation=false
 
   publish-snapshots:
     name: Publish snapshots
