交叉编译配置

--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -62,7 +62,7 @@ jobs:
     needs: run-test
     # 交叉编译 support
     # see https://kotlinlang.org/docs/multiplatform-publish-lib.html#host-requirements
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-java@v4
