--- a/gradle.properties
+++ b/gradle.properties
@@ -12,6 +12,9 @@ kotlin.native.ignoreDisabledTargets=true
 # Deprecated
 # kotlin.native.ignoreIncorrectDependencies=true
 
+# https://kotlinlang.org/docs/multiplatform-publish-lib.html#host-requirements
+kotlin.native.enableKlibsCrossCompilation=true
+
 # 'expect'/'actual' classes (including interfaces, objects, annotations, enums, and 'actual' typealiases) are in Beta. You can use -Xexpect-actual-classes flag to suppress this warning. Also see: https://youtrack.jetbrains.com/issue/KT-61573
 # "-Xexpect-actual-classes"
 org.gradle.jvmargs=-Xmx4G -XX:MaxMetaspaceSize=1G -Dfile.encoding=UTF-8
